2023-12-24T16:11:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7315616334 # 2197
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-24
* notice: last 14d: unq all: 4 22
* notice: prev accum: outdated-unq outdated-all / unq all: 2137 6001 / 2174 6054
* notice: next accum: outdated-unq outdated-all / unq all: 2161 6032 / 2174 6054
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-10] / []

2023-12-23T16:11:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7309234602 # 2194
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-23
* notice: last 14d: unq all: 28 53
* notice: prev accum: outdated-unq outdated-all / unq all: 2128 5991 / 2174 6054
* notice: next accum: outdated-unq outdated-all / unq all: 2137 6001 / 2174 6054
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-09] / []

2023-12-22T08:12:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7297687784 # 2190
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-22
* notice: last 14d: unq all: 37 63
* notice: prev accum: outdated-unq outdated-all / unq all: 2127 5990 / 2174 6054
* notice: next accum: outdated-unq outdated-all / unq all: 2128 5991 / 2174 6054
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-08] / []

2023-12-21T08:12:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7285597370 # 2187