@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-24T16:11:11Z",
-  "count_outdated" : 6032,
-  "uniques_outdated" : 2161,
+  "timestamp" : "2023-12-25T16:11:47Z",
+  "count_outdated" : 6035,
+  "uniques_outdated" : 2164,
   "count" : 6054,
   "uniques" : 2174,
   "clones" : [
-    {
-      "timestamp": "2023-12-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2023-12-12T00:00:00Z",
       "count": 2,
