@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 4,
+  "count": 19,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-12-11T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-12-12T00:00:00Z",
       "count": 2,
