@@ -1,3 +1,12 @@
+2023-12-25T16:11:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7322961512 # 2200
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
+* notice: last 14d: unq all: 2 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 2161 6032 / 2174 6054
+* notice: next accum: outdated-unq outdated-all / unq all: 2164 6035 / 2174 6054
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-12-11] / []
+
 2023-12-24T16:11:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7315616334 # 2197
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-24
